--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
+  "name": "elenor",
+  "version": "1.0.0",
+  "description": "Elenor Boat with discord.js v13",
+  "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
-  "dependencies": {
-    "express": "^4.17.1"
-  },
   "engines": {
-    "node": "12.x"
+    "node": "v16"
   },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@discordjs/builders": "^0.11.0",
+    "@discordjs/rest": "^0.2.0-canary.0",
+    "ascii-table": "^0.0.9",
+    "common-tags": "^1.8.2",
+    "cpu-stat": "^2.0.1",
+    "discord-api-types": "^0.26.0",
+    "discord.js": "^13.3.1",
+    "moment": "^2.29.1",
+    "moment-duration-format": "^2.3.2",
+    "ms": "^2.1.3",
+    "node": "^16.6.1",
+    "os": "^0.1.2",
+    "quick.db": "^7.1.3",
+    "wio.db": "^4.0.21"
+  }
 }
