--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": "^16.6.1",
     "os": "^0.1.2",
     "quick.db": "^7.1.3",
-    "wio.db": "^4.0.21"
+    "wio.db": "^4.0.21",
+    "express": "^4.17.2"
   }
 }
