--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
-  "name": "elenor",
+  "name": "golge",
   "version": "1.0.0",
-  "description": "Elenor Boat with discord.js v13",
-  "main": "bot.js",
+  "description": "Gölge Bot",
+  "main": "index.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node index.js"
   },
-  "engines": {
-    "node": "v16"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
-    "@discordjs/rest": "^0.2.0-canary.0",
-    "ascii-table": "^0.0.9",
-    "common-tags": "^1.8.2",
-    "cpu-stat": "^2.0.1",
-    "discord-api-types": "^0.26.0",
-    "discord.js": "^13.3.1",
+    "chalk": "^4.1.2",
+    "discord-together": "^1.3.25",
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "ms": "^2.1.3",
-    "node": "^16.6.1",
-    "os": "^0.1.2",
     "quick.db": "^7.1.3",
-    "wio.db": "^4.0.21",
-    "express": "^4.17.2"
+    "vcodes.js": "^3.0.2",
+    "ws": "^8.5.0"
   }
 }
