--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "discord-together": "^1.3.25",
-    "discord.js": "^13.6.0",
+    "discord.js": "^13.5.1",
     "dotenv": "^16.0.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "quick.db": "^7.1.3",
     "vcodes.js": "^3.0.2",
-    "ws": "^8.5.0"
+    "ws": "^8.5.0",
+    "express": "^4.17.3",
+    "http": "^0.0.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
