--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vcodes.js": "^3.0.2",
     "ws": "^8.5.0",
     "express": "^4.17.3",
-    "http": "^0.0.0"
+    "http": "^0.0.0",
+    "mongoose": "^6.2.3"
   },
   "engines": {
     "node": "16.x"
