--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ws": "^8.5.0",
     "express": "^4.17.3",
     "http": "^0.0.0",
-    "mongoose": "^6.2.3"
+    "mongoose": "^6.2.3",
+    "canvacord": "^5.2.3"
   },
   "engines": {
     "node": "16.x"
